# github-gql

./: README.md  ghgql.py  issueup.py  pyproject.toml
.github/workflows/: add-issues.yml
issueup/: __init__.py
